--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Site do Gabriel Rodrigues - 2023</title>
+    <title>Site Teste do Gabriel Rodrigues - 2023</title>
 </head>
 <body>
     <ul>
