--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Curso Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-	<li>Linguagem Rust</li>
+	<li>Rust: a linguagem de programação performática e segura</li>
     </ul>
 </body>
 </html>
