--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Curso Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
+	<li>Rust: a linguagem de programação performática e segura</li>
+	<li>Modelagem de banco de dados relacional: modelagem lógica e física</li>
     </ul>
 </body>
 </html>
