--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Ansible: Sua infraestrutura como código</li>
         <li>Curso Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
 	<li>Rust: a linguagem de programação performática e segura</li>
+	<li>Curso de Modelagem lógica e física</li>
     </ul>
 </body>
 </html>
