--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Curso de Docker: Criando containers sem dor de cabeça</li>
+        <li>Docker: Criando containers sem dor de cabeça</li>
         <li>Ansible</li>
         <li>Curso Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
 	<li>Rust: a linguagem de programação performática e segura</li>
