--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li>Curso Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
 	<li>Rust: a linguagem de programação performática e segura</li>
 	<li>Curso de Modelagem lógica e física</li>
+	<li>Spark: apresentando a ferramenta</li>
     </ul>
 </body>
 </html>
